fix badge overflow

--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,8 @@ span {
 .player-button {
     width: 15em;
     text-align: left;
+    white-space: nowrap;
+    overflow: scroll;
 }
 
 #tower-button-crossed {
